--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ max-complexity = 10
 ignore =
     W503,
     F811,
-    D100, D107,
+    D100, D101, D103, D107,
     D203, D205, D213,
     D400, D401,
     N806, N818
@@ -12,3 +12,13 @@ exclude =
     tests/
     venv/
     env/
+
+[pylint.messages_control]
+disable =
+    E1101,
+    C0114, C0115, C0116,
+    C0415,
+    W0611, W0613, W0621
+
+[mypy]
+ignore_missing_imports = True
